--- a/app/assets/styles/main.styl
+++ b/app/assets/styles/main.styl
@@ -1,2 +1,104 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700)
+
 body
 	background-color #fafafa
+	color #223
+*
+	font-family Lato
+	font-size 12px
+	box-sizing border-box
+	margin 0
+	padding 0
+	line-height 150%
+
+.title
+	font-size 20px
+	color #fff
+	line-height 37px
+
+.row
+	font-size 0
+
+.aRight
+	text-align right
+
+a
+	text-decoration none
+	color inherit
+	font-size inherit
+	line-height inherit
+	&:hover
+		text-decoration underline
+
+.headerRow
+	height 37px
+	background-color #111
+	.link
+		color #fff
+		line-height 37px
+		display inline-block
+		vertical-align middle
+		margin-right 5px
+		img
+			max-height 15px
+			-webkit-filter invert()
+			filter invert()
+	.headLeft
+		background-color #333
+		position relative
+		&:after
+			position absolute
+			top 0
+			right -20px
+			content ' '
+			width 0
+			height 0
+			border-top 0
+			border-bottom 37px solid transparent
+			border-left: 20px solid #333
+	.subtitle
+		color #fff
+		font-size 14px
+		line-height 37px
+		padding-left 15px
+
+img
+	&.reponsive
+		max-width 100%
+
+h1
+	font-size 30px
+
+h2
+	font-size 18px
+
+hr
+	border none
+	border-bottom 1px solid #223
+
+.cat
+	font-weight 700
+.copy
+	word-break break-all
+
+table
+	width 100%
+	margin-top 10px
+	th
+		text-align left
+		border-bottom 2px solid #223
+	.endRow
+		border-bottom 1px solid #ccc
+	.number
+		width 30px
+		text-align right
+		padding-right 5px
+	audio
+		margin 10px
+
+for i in 1 2 3 4 5 6 7 8 9 10 11 12
+	.col{i}
+		display inline-block
+		vertical-align top
+		padding 0 15px
+		width (100/12*i)%
