--- a/app/assets/styles/main.styl
+++ b/app/assets/styles/main.styl
@@ -1,5 +1,23 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700)
 
+rounded(n1,n2=n1,n3=n2,n4=n3)
+	-mox-border-top-right-radius n1
+	-webkit-border-top-right-radius n1
+	border-top-right-radius n1
+	
+	-mox-border-bottom-right-radius n2
+	-webkit-border-bottom-right-radius n2
+	border-bottom-right-radius n2
+	
+	-mox-border-bottom-left-radius n3
+	-webkit-border-bottom-left-radius n3
+	border-bottom-left-radius n3
+	
+	-mox-border-top-left-radius n4
+	-webkit-border-top-left-radius n4
+	border-top-left-radius n4
+html,body
+	min-width 1024px
 body
 	background-color #fafafa
 	color #223
@@ -31,7 +49,6 @@ a
 		text-decoration underline
 
 .headerRow
-	height 37px
 	background-color #111
 	.link
 		color #fff
@@ -55,7 +72,7 @@ a
 			height 0
 			border-top 0
 			border-bottom 37px solid transparent
-			border-left: 20px solid #333
+			border-left 20px solid #333
 	.subtitle
 		color #fff
 		font-size 14px
@@ -94,7 +111,100 @@ table
 		text-align right
 		padding-right 5px
 	audio
-		margin 10px
+		display none
+
+.player
+	font-size 0
+	width 200px
+	text-align left
+	background-color #ccc
+	rounded 4px
+	margin 10px
+	display inline-block
+	vertical-align top
+	.button, .progress
+		display inline-block
+		vertical-align top
+	.button
+		width 30px
+		height 30px
+		padding 5px
+		cursor pointer
+		&.playing .inner
+			.bar1, .bar2
+				width 50%
+			.triangle1
+				transform translate(0, 0)
+			.triangle2
+				transform translate(0, 100%)
+		.inner
+			position relative
+			width 100%
+			height 100%
+			overflow hidden
+			div
+				position absolute
+				transition all 0.25s ease
+			.bar1, .bar2
+				width 35%
+				height 100%
+				background-color #223
+			.bar1
+				left 0
+			.bar2
+				right 0
+			.triangle1
+				transform translate(0, -100%)
+			.triangle2
+				transform translate(0, 200%)
+			.triangle1
+				left 0
+				border-top 0
+				border-bottom 10px solid transparent
+				border-right 20px solid #ccc
+			.triangle2
+				left 0
+				border-bottom 0
+				border-top 10px solid transparent
+				border-right 20px solid #ccc
+			
+	.progress
+		height 30px
+		width 170px
+		padding 5px 10px 5px 0
+		.bar
+			margin-top 5px
+			height 10px
+			width 100%
+			background-color #aaa
+			position relative
+			overflow hidden
+			.fuller
+				width 0
+				height 100%
+				background-color #223
+				position absolute
+				top 0
+				left 0
+				rounded 4px,4px,0,0
+			.indicator
+				width 1px
+				background-color #A00
+				height 100%
+				position absolute
+				top 0
+				left 0
+				display none
+.descargar
+	display inline-block
+	margin-top 15px
+	margin-right 15px
+	vertical-align top
+	width 20px
+	height 20px
+	img
+		width 100%
+				
 
 for i in 1 2 3 4 5 6 7 8 9 10 11 12
 	.col{i}
