--- a/app/assets/styles/main.styl
+++ b/app/assets/styles/main.styl
@@ -1,3 +1,7 @@
+/*
+ * Hecho por ZeroDragon (https://github.com/ZeroDragon)
+*/
+
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700)
 
 rounded(n1,n2=n1,n3=n2,n4=n3)
@@ -16,8 +20,7 @@ rounded(n1,n2=n1,n3=n2,n4=n3)
 	-mox-border-top-left-radius n4
 	-webkit-border-top-left-radius n4
 	border-top-left-radius n4
-html,body
-	min-width 1024px
+
 body
 	background-color #fafafa
 	color #223
@@ -33,12 +36,35 @@ body
 	font-size 20px
 	color #fff
 	line-height 37px
+	display inline-block
 
 .row
 	font-size 0
 
 .aRight
 	text-align right
+.aCenter
+	text-align center
+
+.credits
+	font-size 10px
+	margin-top 30px
+	margin-bottom 30px
+	line-height 50px
+	img
+		max-width 0px
+		vertical-align middle
+		rounded 50%
+		margin 0
+		transition all 0.5s ease
+	&:hover
+		img
+			max-width 50px
+			margin 0 5px
+	
+
+.pullRight
+	float right
 
 a
 	text-decoration none
@@ -78,6 +104,7 @@ a
 		font-size 14px
 		line-height 37px
 		padding-left 15px
+		display inline-block
 
 img
 	&.reponsive
@@ -204,11 +231,36 @@ table
 	height 20px
 	img
 		width 100%
-				
 
 for i in 1 2 3 4 5 6 7 8 9 10 11 12
-	.col{i}
+	.fCol{i}
 		display inline-block
 		vertical-align top
 		padding 0 15px
 		width (100/12*i)%
+			
+@media only screen and (min-width: 1100px)
+	for i in 1 2 3 4 5 6 7 8 9 10 11 12
+		.col{i}
+			display inline-block
+			vertical-align top
+			padding 0 15px
+			width (100/12*i)%
+
+@media only screen and (max-width: 1099px)
+	for i in 1 2 3 4 5 6 7 8 9 10 11 12
+		.col{i}
+			display inline-block
+			vertical-align top
+			padding 0 15px
+			width 100%
+
+@media only screen and (min-width: 1100px)
+	.hideBig
+		display none
+@media only screen and (min-width: 500px) and (max-width: 1099px)
+	.hideMedium
+		display none
+@media only screen and (max-width: 499px)
+	.hideSmall
+			display none
