--- a/app/views/main/index.jade
+++ b/app/views/main/index.jade
@@ -105,7 +105,7 @@ body
 		.col12.credits.aCenter
 			| ------- 
 			a(href="https://github.com/ZeroDragon",target="_blank")
-				|Hecho por 
+				|Diseño y desarrollo por 
 				img(src="http://www.gravatar.com/avatar/90a0947bc0ffec1b239d6e48fd8c4dd2?s=200")
 				|ZeroDragon
 			|  -------
