--- a/app/assets/styles/main.styl
+++ b/app/assets/styles/main.styl
@@ -45,8 +45,9 @@ body
 	text-align right
 .aCenter
 	text-align center
-.noWrap
+.podTitle
 	white-space nowrap
+	padding-right 5px
 
 .credits
 	font-size 10px
