--- a/app/views/main/index.jade
+++ b/app/views/main/index.jade
@@ -60,7 +60,7 @@ body
 				for item,k in pods
 					tr
 						td.number #{k+1}
-						td.noWrap #{item.title}
+						td.podTitle #{item.title}
 						td #{item.subtitle}
 						td.hideSmall.hideMedium #{item.duration}
 						- var d = new Date(item.pubDate*1000)
