--- a/app/views/main/rss.jade
+++ b/app/views/main/rss.jade
@@ -1,6 +1,7 @@
 doctype xml
 rss(xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" version="2.0")
   channel
+    itunes:new-feed-url http://podcast.404.mx/rss
     title #{data.title}
     link #{data.link}
     language #{data.language}
