--- a/app/views/main/index.jade
+++ b/app/views/main/index.jade
@@ -11,6 +11,8 @@ body
 		.col8
 			.subtitle #{data.subtitle}
 		.col2
+			.link: a(href="#{data.link}") Inicio
+			.link |
 			.link: a(href="/rss") RSS
 			.link |
 			.link: a(href="https://github.com/ZeroDragon/motorRSS",target="_blank") GitHub
@@ -21,6 +23,8 @@ body
 			.link.pullRight: a(href="https://github.com/ZeroDragon/motorRSS",target="_blank") GitHub
 			.link.pullRight |
 			.link.pullRight: a(href="/rss") RSS
+			.link.pullRight |
+			.link.pullRight: a(href="#{data.link}") Inicio
 	.row &nbsp;
 	br
 	.row
