--- a/app/views/main/rss.jade
+++ b/app/views/main/rss.jade
@@ -24,5 +24,5 @@ rss(xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" version="2.0")
         itunes:image(href="#{item.image}")/
         enclosure(url="#{item.enclosure_url}" length="#{item.enclosure_length}" type="audio/mpeg")/
         guid #{item.guid}
-        pubDate #{new Date(~~(item.pubDate)*1000)}
+        pubDate #{CT_DateFormat(~~item.pubDate,"ddd, dd mmm yyyy HH:MM:ss")} (CST)
         itunes:duration #{item.duration}
